# livrariafb

./: README.md  db.sqlite3  livraria_bkp.json  pyproject.toml  requirements.txt
config/: settings.py  urls.py  wsgi.py
livraria/: admin.py  apps.py  models.py  serializers.py  views.py
livraria/migrations/: 0001_initial.py  0002_autor_editora_livro.py  0002_livro_capa.py  0003_alter_autor_email.py  0003_livro_autores.py
livraria/models/: __init__.py  editora.py  livro.py
livraria/serializers/: __init__.py  autor.py  livro.py
livraria/views/: __init__.py  autor.py  livro.py
