[tool.pdm]

[project]
name = "fabrica"
version = "0.1.0"
description = ""
authors = [
    {name = "LucasLutf", email = "oolucaslutf@gmail.com"},
]
dependencies = [
    "django>=4.1.7",
    "djangorestframework>=3.14.0",
    "django-cors-headers>=3.14.0",
    "djangorestframework-simplejwt>=5.2.2",
    "drf-spectacular>=0.26.1",
    "django-environ>=0.10.0",
    "mysqlclient>=2.1.1",
    "setuptools>=67.6.0",
    "python-magic>=0.4.27",
    "Pillow>=9.4.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
